--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,15 @@
+*{
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 20px;
+}
+
+a{
+  text-decoration: none;
+  color: black;
 }
