Completed authentication page

--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -5,6 +5,7 @@
   color: white;
   background-color: black;
   font-size: 15px;
+  padding: 0 10px;
   text-transform: uppercase;
   font-family: "Open Sans Condensed", sans-serif;
   font-weight: bolder;
