--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,8 @@ body {
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 20px;
+  padding: 20px 40px;
+  background-color: #FAF0E6;
 }
 
 a{
