--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -21,7 +21,33 @@
   }
 
   .nav-link {
-    padding: 15px 20px;
+    padding: 0px 30px;
     cursor: pointer;
+    position: relative;
+
+    &::before {
+      background-color: rgb(0, 0, 0);
+      content: "";
+      border-radius: 0px 0px 4px 4px;
+      bottom: -6px;
+      position: absolute;
+      left: 0px;
+      right: 0px;
+      height: 2px;
+      opacity: 0px;
+      transform: scaleX(0);
+      transform-origin: left center;
+      transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+      visibility: hidden;
+      width: auto;
+    }
+
+    &:hover {
+      &::before {
+        opacity: 1 !important;
+        visibility: visible;
+        transform: scaleX(1);
+      }
+    }
   }
 }
