--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 240px;
-  height: 300px;
+  height: 350px;
   position: absolute;
   padding: 20px;
   border: 1px solid black;
@@ -11,15 +11,16 @@
   right: 72px;
   z-index: 5;
 
-  .cart-items{
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+  .cart-items {
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    overflow: auto;
   }
 
-  button{
-      margin-top: auto;
+  button {
+    margin-top: auto;
   }
 }
